force-app/main/default/objects/EYI_Global_Charges__c/EYI_Global_Charges__c.object-meta.xml
<CustomObject>
    <label>Global Charges</label>
    <nameField>
        <label>Global Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>