force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Condition_Type__c</fullName>
    <formula>CASE(
EYI_SAP_Condition_Type__c,
&apos;ZADC&apos;, &apos;Infra Charges&apos;,
&apos;ZBP0&apos;, &apos;Base Price&apos;,
&apos;ZBRA&apos;, &apos;Brokerage Additional&apos;,
&apos;ZBRK&apos;, &apos;Brokerage&apos;,
&apos;ZCLB&apos;, &apos;Club House&apos;,
&apos;ZFRC&apos;, &apos;Floor Rise&apos;,
&apos;ZLAN&apos;, &apos;Land Cost&apos;,
&apos;ZPRM&apos;, &apos;2 Wheeler Charges&apos;,
&apos;ZRCP&apos;, &apos;Base Price-Booking&apos;,
&apos;MSEB&apos;, &apos;MSEB Charges&apos;,
&apos;SDR-RECOVERABLE&apos;, &apos;STAMP DUTY AND REG - RECOVERABLE&apos;,
&apos;SDR-NONRECOVER&apos;, &apos;STAMP DUTY NON RECOVERABLE&apos;,
&apos;&apos;
)</formula>
    <label>Condition Type</label>
    <type>Text</type>
</CustomField>