force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_Demand_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Applicable</label>
    <type>Checkbox</type>
</CustomField>