force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_SAP_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Calculation_Type__c</fullName>
    <label>SAP Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_SAP_Condition_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>