force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_SAP_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Condition_Type__c</fullName>
    <label>SAP Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZADC</fullName>
            </value>
            <value>
                <fullName>ZBP0</fullName>
            </value>
            <value>
                <fullName>ZBRA</fullName>
            </value>
            <value>
                <fullName>ZBRK</fullName>
            </value>
            <value>
                <fullName>ZCLB</fullName>
            </value>
            <value>
                <fullName>ZFRC</fullName>
            </value>
            <value>
                <fullName>ZLAN</fullName>
            </value>
            <value>
                <fullName>ZPRM</fullName>
            </value>
            <value>
                <fullName>ZRCP</fullName>
            </value>
            <value>
                <fullName>MSEB</fullName>
            </value>
            <value>
                <fullName>SDR-RECOVERABLE</fullName>
            </value>
            <value>
                <fullName>SDR-NONRECOVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>