force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_SAP_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Name__c</fullName>
    <description>This field is to Update the SAP material Name for the other charges</description>
    <externalId>true</externalId>
    <label>SAP Material Name</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>