force-app/main/default/objects/EYI_Global_Charges__c/fields/EYI_SAP_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Sequence_Number__c</fullName>
    <label>SAP Sequence Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>