force-app/main/default/objects/EYI_Global_Charges__c/listViews/All_Global_Charges.listView-meta.xml
<ListView>
    <fullName>All_Global_Charges</fullName>
    <columns>NAME</columns>
    <columns>EYI_SAP_Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Global Charges</label>
</ListView>